Make the last sprite appear in front of others. Fix menu swipe for ADV on mobile

--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -33,10 +33,12 @@
 		height: 100%;
 		position: absolute;
 		inset: 0;
+		isolation: isolate;
 	}
 	#layer-graphics {
 		z-index: 0;
 		overflow: hidden;
+		pointer-events: none;
 
 		.blur {
 			filter: blur(80px) brightness(0.4);
